# autopipe

./: .gitignore  Cargo.toml  Dockerfile.desktop  Dockerfile.registry  LICENSE  README.md  compose.yml
.github/workflows/: release.yml
autopipe-ext/: package-lock.json  package.json
autopipe-ext/src/: init.js  publish.js  validate.js
crates/common/: Cargo.toml
crates/common/src/: api_client.rs  lib.rs  models.rs  templates.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: app.rs  claude_config.rs  config.rs  main.rs  ssh.rs  tray.rs
crates/desktop/src/mcp/: mod.rs  server.rs  viewer.rs
crates/registry/: Cargo.toml
crates/registry/src/: db.rs  handlers.rs  main.rs  routes.rs  web.rs
landing/: Dockerfile  package-lock.json  package.json
landing/src/: app.html
landing/src/lib/server/: plugins.ts  schema.ts
landing/src/routes/: +page.svelte
landing/src/routes/getting-started/: +page.svelte
landing/src/routes/plugins/: +layout.svelte  +page.server.ts  +page.svelte
landing/src/routes/plugins/[id]/: +page.server.ts  +page.svelte
landing/src/routes/plugins/guide/: +page.svelte
web/: Dockerfile  package-lock.json  package.json
web/src/: app.html
web/src/lib/: styles.ts
web/src/lib/server/: db.ts  github.ts  pipelines.ts  plugins.ts  schema.ts  security.ts
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/api/auth/device/: +server.ts
web/src/routes/api/auth/device/poll/: +server.ts
web/src/routes/api/pipelines/: +server.ts
web/src/routes/api/pipelines/[id]/: +server.ts
web/src/routes/api/plugins/: +server.ts
web/src/routes/api/plugins/[id]/: +server.ts
web/src/routes/api/plugins/publish/: +server.ts
web/src/routes/api/publish/: +server.ts
web/src/routes/pipelines/[id]/: +page.server.ts  +page.svelte
web/src/routes/pipelines/[id]/download/: +server.ts
web/src/routes/pipelines/[id]/file/: +server.ts
web/src/routes/plugins/: +page.svelte
web/src/routes/plugins/[id]/: +page.server.ts  +page.svelte
web/src/routes/plugins/guide/: +page.svelte
(+2 files in other folders)
