[package]
name = "autopipe"
version.workspace = true
edition.workspace = true

[features]
default = []
gui = ["eframe", "tray-icon", "image", "gtk"]
portable = ["dep:openssl"]

[dependencies]
common = { path = "../common" }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
ssh2 = "0.9"
base64 = "0.22"
open = "5"
chrono = "0.4"
axum = "0.8"
openssl = { version = "0.10", features = ["vendored"], optional = true }

# GUI dependencies (optional, requires GTK on Linux)
eframe = { version = "0.31", optional = true }
tray-icon = { version = "0.19", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
