[package]
name = "registry"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "2"
